<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">cococo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mainui_recording_title">녹음</string>
    <string name="mainui_select_title">파일 선택</string>
    <string name="mainui_connection_title">병원 연결</string>
    <string name="mainui_control_title">기기 제어</string>
    <string name="mainui_setting_title">설정</string>
    
    <string name="recui_recording_title">녹음</string>
    <string name="recui_recording_btn">녹음시작</string>
    <string name="recui_play_btn">재생</string>
    <string name="recui_time_title">녹음경과 시간 -   </string>
    <string name="recui_decible_title">데시벨 - </string>
    
    <string name="mediaplay_play_btn">∥</string>
    <string name="mediaplay_stop_btn">■</string>
    <string name="mediaplay_filename">재생 파일명</string>
    
    <string name="filelist_title">파일목록</string>
    
    <string name="mailform_sender_email">보내는사람 e-mail (gmail만 사용)</string>
    <string name="mailform_sender_passwd">보내는사람 e-mail 암호(인증필요)</string>
    <string name="mailform_receiver_email">받는사람 e-mail</string>
    <string name="mailform_email_title">e-mail 제목</string>
    <string name="mailform_email_text_contents">e-mail 내용</string>
    <string name="mailform_recorded_file_title">첨부파일</string>
   	<string name="mailform_recorded_file_text_contents">첨부파일 내용</string>
   	
   	<string name="view_submit_title">전송</string>
   	<string name="view_play_title">재생</string>
   	
   	<string name="saving_rate_title">진행률 :</string>
    
    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    
    
</resources>