<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5pt"
    android:scrollbars="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <TextView android:id="@+id/TextView01" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mailform_recorded_file_text_contents" android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailform_sender_email" />

            <EditText
                android:id="@+id/sendemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="yichangsin@gmail.com"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:text="@string/mailform_sender_passwd" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="changsin12"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailform_receiver_email" />

            <EditText
                android:id="@+id/receivemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="ycs318@naver.com"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailform_email_title" />

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailform_recorded_file_title" />

            <TextView
                android:id="@+id/filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailform_recorded_file_text_contents"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/graphname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mailform_recorded_file_text_contents"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>